# MESC_Firmware

./: .clang-format  .gitignore  CMakeLists.txt  build_rzt2m.sh
.github/workflows/: cmake.yml
MESC_Common/HAL/: MESC_HAL.h
MESC_Common/Inc/: MESCBLDC.h  MESC_INTERNAL.h  MESC_MOTOR_DEFAULTS.h  MESC_STM.h  MESCbat.h  MESCcli.h  MESCerror.h  MESCflash.h  MESCfnv.h  MESCfoc.h  MESChw_setup.h  MESCmotor.h  MESCmotor_state.h  MESCposition.h  MESCprofile.h  MESCsin_lut.h  MESCspeed.h  MESCtemp.h  MESCuart.h  MESCui.h  MPU6050.h  Simple_coms.h  bit_op.h  conversions.h  fingerprint.h  fonts.h  pp_op.h  ssd1306.h  string_op.h
MESC_Common/Src/: MESCBLDC.c  MESC_BLDC.c  MESC_Comms.c  MESCbat.c  MESCcli.c  MESCerror.c  MESCflash.c  MESCfoc.c  MESCmotor.c  MESCposition.c  MESCprofile.c  MESCsin_lut.c  MESCspeed.c  MESCtemp.c  MESCuart.c  MESCui.c  fonts.c  ssd1306.c
MESC_Common/not_used/: MESCBLDC.c  MESC_BLDC.h  MESC_Comms.c  MESC_Comms.h  MESCmotor_state.c  MPU6050.c  MPU6050.h  Simple_coms.c
MESC_F303CB/Core/Inc/: MESC_FOC_ESC_V0.5.h
MESC_F401CC/Core/Inc/: MP2_V0_1.h
MESC_F405RG/: CMakeLists.txt
MESC_F405RG/Core/Inc/: CL700_V0_3.h  FreeRTOSConfig.h  GIGAVESC.h  MESC_HAL_Config.h  MP2_V0_1.h  MX_FOC_GaN.h  MX_FOC_IMS.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_i2c.h  stm32f4xx_hal_i2c_ex.h  stm32f4xx_it.h  stm32fxxx_hal.h
MESC_F405RG/Core/Src/: MESC_HAL_LLD.c  MESChw_setup.c  main.c
MESC_F405RG_Stepper/Core/Inc/: Dual_Stepper.h
MESC_F405RG_Stepper/Core/Src/: main.c
MESC_F411CE/Core/Inc/: MP2_V0_1.h
MESC_F411CE/Core/Src/: main.c
MESC_HAL/: MESC_HAL_adc.h  MESC_HAL_common.h  MESC_HAL_gpio.h  MESC_HAL_pwm.h  MESC_HAL_timer.h  MESC_HAL_uart.h
MESC_HAL/rzt2m/: adc_rzt2m.c  gpio_rzt2m.c  pwm_rzt2m.c  timer_rzt2m.c  uart_rzt2m.c
MESC_HAL/stm32f3xx/: adc_stm32f3.c  gpio_stm32f3.c  pwm_stm32f3.c  timer_stm32f3.c  uart_stm32f3.c
MESC_HAL/stm32f4xx/: adc_stm32f4.c  gpio_stm32f4.c  pwm_stm32f4.c  timer_stm32f4.c  uart_stm32f4.c
MESC_HAL/stm32l4xx/: adc_stm32l4.c  gpio_stm32l4.c  pwm_stm32l4.c  timer_stm32l4.c  uart_stm32l4.c
MESC_L431RC/Core/Inc/: MX_FOC_IMS.h
MESC_L431RC/Core/Src/: main.c
MESC_RTOS/Common/: RTOS_flash.c  RTOS_flash.h
MESC_RTOS/Dash/: MESCinterface.c  MESCinterface.h  MESCmotor_state.h
MESC_RTOS/MESC/: MESCinterface.c  MESCinterface.h  calibrate.c  calibrate.h  hfi.c  hfi.h
MESC_RTOS/TTerm/Core/: TTerm_var.c
MESC_RTOS/Tasks/: app_template.c  app_template.h  apps.c  apps.h  can_ids.h  cana.c  cana.h  init.c  init.h  task_can.c  task_can.h  task_cli.c  task_cli.h  task_overlay.c  task_overlay.h  top.c  top.h
MESC_RZT2M/: .gitignore  .secure_azone  .secure_xml  CMakeLists.txt  Config.cmake  MESC_RZT2M_board_pin_map.ods  README.md  buildinfo.json  configuration.xml  memory_regions.ld  rzt_cfg.txt
MESC_RZT2M/cmake/: GeneratedCfg - fsp2.1.cmake  GeneratedCfg.cmake  GeneratedSrc - fsp2.1.cmake  GeneratedSrc.cmake  gcc.cmake
MESC_RZT2M/encoder/: eEncoderStatusFlags.h  eType.h  r_enc_int_rzt2.c  r_enc_int_rzt2.h  tMotor.h
MESC_RZT2M/encoder/AFormat/: iodefine_a_as.h  r_a_as_rzt2.c  r_a_as_rzt2_config.h  r_a_as_rzt2_if.h  r_a_as_rzt2_private.h  r_a_as_setup.c
MESC_RZT2M/encoder/AFormat/a_format/: r_a_format_rzt2.c  r_a_format_rzt2_private.h
MESC_RZT2M/encoder/BiSS/: iodefine_biss.h  r_biss_rzt2.c  r_biss_rzt2_if.h  r_biss_setup.c
MESC_RZT2M/encoder/BiSS/bissc/: r_bissc_rzt2.c  r_bissc_rzt2_if.h
MESC_RZT2M/encoder/EnDat/: iodefine_endat.h  r_endat_rzt2.c  r_endat_rzt2_if.h  r_endat_setup.c
MESC_RZT2M/encoder/FACoder/: iodefine_fac.h  r_fac_rzt2.c  r_fac_rzt2_if.h  r_fac_setup.c
MESC_RZT2M/encoder/HIPERFACE_DSL/: iodefine_hfdsl.h  r_hfdsl_rzt2.c  r_hfdsl_rzt2_config.h  r_hfdsl_rzt2_if.h  r_hfdsl_setup.c
MESC_RZT2M/lib/ecl/: r_ecl_rzt2_if.h
MESC_RZT2M/rzt_cfg/aws/: FreeRTOSConfig.h  FreeRTOSIPConfig.h
MESC_RZT2M/rzt_cfg/fsp_cfg/: r_adc_cfg.h  r_canfd_cfg.h  r_dmac_cfg.h  r_dsmif_cfg.h  r_ether_cfg.h  r_ether_phy_cfg.h  r_ether_selector_cfg.h  r_icu_error_cfg.h  r_iic_master_cfg.h  r_mtu3_cfg.h  r_mtu3_phase_count_cfg.h  r_mtu3_three_phase_cfg.h  r_poe3_cfg.h  r_sci_uart_cfg.h  r_spi_cfg.h
MESC_RZT2M/rzt_cfg/fsp_cfg/bsp/: board_cfg.h  bsp_cfg.h  bsp_mcu_device_cfg.h  bsp_mcu_device_pn_cfg.h  bsp_mcu_family_cfg.h  bsp_pin_cfg.h
MESC_RZT2M/rzt_gen/: blinky_thread.c  blinky_thread.h  bsp_clock_cfg.h  common_data.c  common_data.h  comms_thread.c  comms_thread.h  elc_data.c  hal_data.c  hal_data.h  main.c  main.x  pin_data.c  vector_data.c  vector_data.h
MESC_RZT2M/script/: fsp.ld  fsp_ram_execution.ld  fsp_xspi0_boot.ld
MESC_RZT2M/src/: MESC_F405.h  MESC_HAL_Config.h  MESC_HAL_LLD.c  MESC_init.c  MESC_init.h  MESChw_rzt2m.h  MESChw_setup.c  MP2_V0_1.h  README.md  RT2TZM_FSP_init.c  RT2TZM_FSP_init.h  RT2TZM_interrupts.c  blinky_thread_entry.c  comms_thread_entry.c  enc_dat.S  hal_entry.c  main.c  rzt_hal.h
MESC_RZT2M/src/fsp/: adc_hal.c  adc_hal.h  canfd_hal.c  canfd_hal.h  dsmif_hal.c  dsmif_hal.h  elc.hal.c  elc_hal.h  gpt_timers_hal.c  gpt_timers_hal.h  max17841.c  max17841.h  mtu3_hal.c  mtu3_hal.h  poe3_hal.c  poe3_hal.h  spi_hal.c  spi_hal.h  uart_hal.c  uart_hal.h
